working on studio section of site

--- a/futuregreen/templates/index.html
+++ b/futuregreen/templates/index.html
@@ -28,7 +28,7 @@
         <article class="text box full" id="profile">
                 <h1>Studio</h1>
                 {%  gblock "firm_profile" for "content.ContentBlock" with "content/contentblock/excerpt.html" %}
-                <a href="#" class="tease">Read More</a>
+                <a href="{% url studio %} %}" class="tease">Read More</a>
         </article>
     </div>
     <div class="half">
