--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -733,14 +733,12 @@ body > footer > .contact {
 }
 
 .max .details .meta .info-boxes {
-    top:0;
-    right:0;
+    float:left;
     width:33.33333%;
 }
 
-.max .details .meta .categories,
-.max .details .meta .people,{
-    width:66.66667%;
+.max .details .meta .categories {
+    width:33.3333%;
     float:left;
 }
 
