--- a/futuregreen/templates/portfolio/project_detail.html
+++ b/futuregreen/templates/portfolio/project_detail.html
@@ -58,10 +58,10 @@
                         {% endif %}
                     </ul>
                 {% endif %}
-                <div class="info-text box">
+                <div class="info-text">
                 {% if project.clients.all or project.collaborators.all %}
                     {% if project.clients.all %}
-                    <div>
+                    <div class="box">
                         <h2>Clients</h2>
                         <ul>
                         {% for client in project.clients.all %}
@@ -71,7 +71,7 @@
                      </div>
                     {% endif %}
                     {% if project.collaborators.all %}
-                    <div>
+                    <div class="box">
                         <h2>Collaborators</h2>
                         <ul>
                         {% for collaborator in project.collaborators.all %}
@@ -81,13 +81,13 @@
                     </div>
                     {% endif %}
                     {% if project.external_url %}
-                    <div>
+                    <div class="box">
                         <h2>Web Link</h2>
                         <p class="url">{{ project.external_url|urlizetrunc:25 }}</p>
                     </div>
                     {% endif %}
                     {% if project.tags.all %}
-                    <div>
+                    <div class="box">
                         <h2>Tags</h2>
                         <ul class="tags">
                         {% for tag in project.tags.all %}
