--- a/futuregreen/templates/portfolio/project_detail.html
+++ b/futuregreen/templates/portfolio/project_detail.html
@@ -37,7 +37,7 @@
             </div>
             <div class="meta">
                 {% if project.project_types.all or project.landscape_types.all %}
-                    <ul class="categories">
+                    <ul class="categories box">
                         {% if project.project_types.all %}
                             {% for category in project.project_types.all %}
                                 <li class="square">
@@ -58,7 +58,7 @@
                         {% endif %}
                     </ul>
                 {% endif %}
-                <div class="info-text">
+                <div class="info-text box">
                 {% if project.clients.all or project.collaborators.all %}
                     {% if project.clients.all %}
                     <div class="box">
