--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -740,6 +740,11 @@ body > footer > .contact {
 
 .max .details .meta .categories {
     padding: 10px;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    -o-box-sizing: border-box;
+    -ms-box-sizing: border-box;
+    box-sizing: border-box;
 }
 
 @media screen and (max-width: 1240px) and (min-width: 1120px) {
