--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -732,6 +732,10 @@ body > footer > .contact {
     margin: 0 0 0 0;
 }
 
+.max .details .meta .info-boxes {
+    float:left;
+}
+
 .max .details .meta .categories {
     padding: 10px;
     -webkit-box-sizing: border-box;
