--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -718,6 +718,7 @@ body > footer > .contact {
     -o-column-count:2;
     -ms-column-count:2;
     column-count:2;
+    float:right;
 }
 
 .max .details .meta {
