--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -373,7 +373,7 @@ body > footer > .contact {
                url('images/vertical-bg.png') no-repeat 10px 90%,
                url('images/vertical-bg.png') no-repeat 10px top,
                url('images/bottom-bg.png') no-repeat left 10px;
-    float:left;
+    float:right;
     width:58.33333%;
     position: relative;
     overflow: auto;
@@ -574,7 +574,7 @@ body > footer > .contact {
 }
 
 .details .description {
-    float:left;
+    float:right;
     width:60%;
 }
 
