--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -709,6 +709,7 @@ body > footer > .contact {
     width:100%;
     background: none;
     position:relative;
+    overflow: auto;
 }
 
 .max .details .description {
@@ -719,6 +720,7 @@ body > footer > .contact {
     -ms-column-count:3;
     column-count:3;
     float:right;
+    overflow: auto;
 }
 
 .max .details .meta {
@@ -729,6 +731,7 @@ body > footer > .contact {
 .max .details .meta .people,
 .max .details .meta .other,
 .max .details .meta .info-boxes {
+    
     margin: 0 0 0 0;
 }
 
