--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -719,6 +719,7 @@ body > footer > .contact {
     -o-column-count:3;
     -ms-column-count:3;
     column-count:3;
+    height:200px;
     float:right;
     overflow: auto;
 }
