--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -719,7 +719,11 @@ body > footer > .contact {
     -o-column-count:3;
     -ms-column-count:3;
     column-count:3;
-    height:160px;
+    -moz-column-gap: 20px;
+    -webkit-column-gap: 20px;
+    -ms-column-gap: 20px;
+    -o-column-gap: 20px;
+    column-gap: 20px;
     float:right;
     overflow: auto;
 }
