--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -715,7 +715,7 @@ body > footer > .contact {
 .max .details .description {
     width:83.33333%;
     -webkit-column-count:3;
-    -moz-column-width:3;
+    -moz-column-count:3;
     -o-column-count:3;
     -ms-column-count:3;
     column-count:3;
