working on studio section of site

--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -713,9 +713,9 @@ body > footer > .contact {
 }
 
 .max .details .description {
-    width:83.33333%;
+    /*width:83.33333%;*/
+    width:400px;
     -webkit-column-count:3;
-    -webkit-column-width:33%;
     -moz-column-count:3;
     -o-column-count:3;
     -ms-column-count:3;
