working on studio section of site

--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -715,7 +715,7 @@ body > footer > .contact {
 .max .details .description {
     /*width:83.33333%;*/
     width:400px;
-    -webkit-column-width:33%;
+    -webkit-column-count:3;
     /*-webkit-column-count:3;
     -moz-column-count:3;
     -o-column-count:3;
@@ -729,7 +729,6 @@ body > footer > .contact {
     -moz-column-fill:balanced;
     column-fill:balanced;*/
     float:right;
-    overflow: auto;
 }
 
 .max .details .meta {
