working on studio section of site

--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -713,10 +713,8 @@ body > footer > .contact {
 }
 
 .max .details .description {
-    /*width:83.33333%;*/
-    width:400px;
-    -webkit-column-count:4;
-    /*-webkit-column-count:3;
+    width:83.33333%;
+    -webkit-column-count:3;
     -moz-column-count:3;
     -o-column-count:3;
     -ms-column-count:3;
@@ -727,7 +725,7 @@ body > footer > .contact {
     -moz-column-gap: 20px;
     -webkit-column-fill:balanced;
     -moz-column-fill:balanced;
-    column-fill:balanced;*/
+    column-fill:balanced;
     float:right;
 }
 
