--- a/futuregreen/templates/index.html
+++ b/futuregreen/templates/index.html
@@ -2,9 +2,9 @@
 {% load generic_flatblocks %}
 {% block body_id %}home{% endblock body_id %}
 {% block content %}
-     <div class="half">
-       {% for project in project_list|slice:"0:1" %}
-            <article class="project box two-thirds featured" id="{{ project.slug }}">
+     <div class="sixth">
+       {% for project in project_list|slice:"0:3" %}
+            <article class="project box full" id="{{ project.slug }}">
                 <h1>{{ project.name }}</h1>
                 {% for image in project.projectimage_set.all %}
                     {% if image.is_main %}
@@ -14,25 +14,14 @@
                 {%  endfor %}
             </article>
         {% endfor %}
-        {% for project in project_list|slice:"1:3" %}
-            <article class="project box third" id="{{ project.slug }}">
-                <h1>{{ project.name }}</h1>
-                {% for image in project.projectimage_set.all %}
-                    {% if image.is_main %}
-                        <a href="{{ project.get_absolute_url }}">
-                            <img alt="{{ project.title }}" src="{{ image.list.url }}" /></a>
-                    {% endif %}
-                {%  endfor %}
-            </article>
-        {% endfor %}
+     </div>
+    <div class="half">
         <article class="text box full" id="profile">
                 <h1>Studio</h1>
                 {%  gblock "firm_profile" for "content.ContentBlock" with "content/contentblock/excerpt.html" %}
                 <a href="{% url studio %}" class="tease">Read More</a>
         </article>
-    </div>
-    <div class="half">
-         {% for project in project_list|slice:"3:4" %}
+        {% for project in project_list|slice:"3:5" %}
             <article class="project box third" id="{{ project.slug }}">
                 <header><h1>{{ project.name }}</h1></header>
                 {% for image in project.projectimage_set.all %}
@@ -43,16 +32,7 @@
                 {%  endfor %}
             </article>
         {% endfor %}
-        <article class="text box two-thirds" id="news">
-           <div>
-                <h1>News</h1>
-                <p class="date">{{ item.date_published|date:"M d, Y" }}</p>
-                <h2>{{ item.title }}</h2>
-                {{ item.excerpt_html|safe|truncatewords_html:20 }}
-                <p><a href="#" class="tease">Read More</a></p>
-           </div>
-        </article>
-        {% for project in project_list|slice:"4:5" %}
+        {% for project in project_list|slice:"5:6" %}
             <article class="project box two-thirds featured" id="{{ project.slug }}">
                 <h1>{{ project.name }}</h1>
                 {% for image in project.projectimage_set.all %}
@@ -63,7 +43,9 @@
                 {%  endfor %}
             </article>
         {% endfor %}
-        {% for project in project_list|slice:"5:7" %}
+    </div>
+    <div class="third">
+        {% for project in project_list|slice:"6:" %}
            <article class="project box third" id="{{ project.slug }}">
                 <h1>{{ project.name }}</h1>
                {% for image in project.projectimage_set.all %}
@@ -75,6 +57,15 @@
                {%  endfor %}
            </article>
        {% endfor %}
+        <article class="text box full" id="news">
+           <div>
+                <h1>News</h1>
+                <p class="date">{{ item.date_published|date:"M d, Y" }}</p>
+                <h2>{{ item.title }}</h2>
+                {{ item.excerpt_html|safe|truncatewords_html:20 }}
+                <p><a href="#" class="tease">Read More</a></p>
+           </div>
+        </article>
     </div>
 {% endblock content %}
 {% block js_local %}
