working on studio section of site

--- a/futuregreen/templates/index.html
+++ b/futuregreen/templates/index.html
@@ -2,9 +2,25 @@
 {% load generic_flatblocks %}
 {% block body_id %}home{% endblock body_id %}
 {% block content %}
-     <div class="sixth">
-       {% for project in project_list|slice:"0:3" %}
-            <article class="project box full" id="{{ project.slug }}">
+     <div class="full">
+       {% for project in project_list|slice:"0:1" %}
+            <article class="project box sixth" id="{{ project.slug }}">
+                <h1>{{ project.name }}</h1>
+                {% for image in project.projectimage_set.all %}
+                    {% if image.is_main %}
+                        <a href="{{ project.get_absolute_url }}">
+                            <img alt="{{ project.title }}" src="{{ image.list.url }}" /></a>
+                    {% endif %}
+                {%  endfor %}
+            </article>
+        {% endfor %}
+         <article class="text box half" id="profile">
+                <h1>Studio</h1>
+                {%  gblock "firm_profile" for "content.ContentBlock" with "content/contentblock/excerpt.html" %}
+                <a href="{% url studio %}" class="tease">Read More</a>
+        </article>
+        {% for project in project_list|slice:"1:3" %}
+            <article class="project box sixth" id="{{ project.slug }}">
                 <h1>{{ project.name }}</h1>
                 {% for image in project.projectimage_set.all %}
                     {% if image.is_main %}
@@ -16,11 +32,7 @@
         {% endfor %}
      </div>
     <div class="half">
-        <article class="text box full" id="profile">
-                <h1>Studio</h1>
-                {%  gblock "firm_profile" for "content.ContentBlock" with "content/contentblock/excerpt.html" %}
-                <a href="{% url studio %}" class="tease">Read More</a>
-        </article>
+
         {% for project in project_list|slice:"3:5" %}
             <article class="project box third" id="{{ project.slug }}">
                 <header><h1>{{ project.name }}</h1></header>
