--- a/futuregreen/templates/index.html
+++ b/futuregreen/templates/index.html
@@ -31,10 +31,9 @@
             </article>
         {% endfor %}
      </div>
-    <div class="half">
-
-        {% for project in project_list|slice:"3:5" %}
-            <article class="project box third" id="{{ project.slug }}">
+    <div class="third">
+        {% for project in project_list|slice:"3:7" %}
+            <article class="project box half" id="{{ project.slug }}">
                 <header><h1>{{ project.name }}</h1></header>
                 {% for image in project.projectimage_set.all %}
                     {% if image.is_main %}
@@ -44,7 +43,9 @@
                 {%  endfor %}
             </article>
         {% endfor %}
-        {% for project in project_list|slice:"5:6" %}
+    </div>
+    <div class="third">
+        {% for project in project_list|slice:"7:8" %}
             <article class="project box two-thirds featured" id="{{ project.slug }}">
                 <h1>{{ project.name }}</h1>
                 {% for image in project.projectimage_set.all %}
@@ -57,8 +58,8 @@
         {% endfor %}
     </div>
     <div class="third">
-        {% for project in project_list|slice:"6:" %}
-           <article class="project box third" id="{{ project.slug }}">
+        {% for project in project_list|slice:"8:" %}
+           <article class="project box half" id="{{ project.slug }}">
                 <h1>{{ project.name }}</h1>
                {% for image in project.projectimage_set.all %}
                    {% if image.is_main %}
@@ -69,7 +70,7 @@
                {%  endfor %}
            </article>
        {% endfor %}
-        <article class="text box full" id="news">
+        <article class="text box full">
            <div>
                 <h1>News</h1>
                 <p class="date">{{ item.date_published|date:"M d, Y" }}</p>
