working on studio section of site

--- a/futuregreen/templates/index.html
+++ b/futuregreen/templates/index.html
@@ -70,7 +70,7 @@
                {%  endfor %}
            </article>
        {% endfor %}
-        <article class="text box full">
+        <article class="text box full" id="news">
            <div>
                 <h1>News</h1>
                 <p class="date">{{ item.date_published|date:"M d, Y" }}</p>
