working on studio section of site

--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -296,7 +296,7 @@ body > footer > .contact {
 }
 
 #home article#news {
-    position:relative;
+    /*position:relative;*/
 }
 
 #home article#news div {
