working on studio section of site

--- a/futuregreen/templates/index.html
+++ b/futuregreen/templates/index.html
@@ -84,8 +84,8 @@
 {% block js_local %}
     <script type="text/javascript">
         function Flex() {
-            var height = $("article.project.third").width();
-            $("article.text > div").css('min-height', height);
+            var height = $("article.project").width();
+            $("article.text").css('min-height', height);
         }
         $(document).ready(function() {
             Flex();
