--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -313,7 +313,7 @@ body > footer > .contact {
 #home article#news p.date {
     font-family: purista-web-1,purista-web-2, sans-serif;
     font-size:1.5em;
-    color:rgba(255,255,255,0.5);
+    /*color:rgba(255,255,255,0.5);*/
 }
 
 #home article#news h1 {
@@ -329,12 +329,7 @@ body > footer > .contact {
 }
 
 #home article#news .tease {
-    color:#fff;
-}
-
-#home article#news .date {
-    font-weight:bold;
-    color:rgba(255,255,255,0.5);
+    /*color:#fff;*/
 }
 
 #home article#news h2 {
