--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -273,7 +273,7 @@ body > footer > .contact {
     height:100%;
     margin: 10px;
     z-index:10;
-    background:rgba(0,0,0,0.5);
+    /*background:rgba(0,0,0,0.5);*/
     color:rgba(255,255,255,0.8);
     line-height:1em;
     padding: 0;
