--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -228,7 +228,8 @@ body > footer > .contact {
 
 #home article#profile {
     float:left;
-    background:url('images/corner-bg-top-right.png') no-repeat right top;
+    background:url('images/corner-bg-top-right.png') no-repeat right top,
+               url('images/profile_bg.png') no-repeat right top;
     position:relative;
 }
 
@@ -271,7 +272,6 @@ body > footer > .contact {
     left:0;
     width:100%;
     height:100%;
-    margin: 10px;
     z-index:10;
     /*background:rgba(0,0,0,0.5);*/
     color:rgba(255,255,255,0.8);
