--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -228,9 +228,18 @@ body > footer > .contact {
 
 #home article#profile {
     float:left;
-    background:url('images/corner-bg-top-right.png') no-repeat right top,
-               url('images/profile_bg.png') no-repeat right top;
     position:relative;
+}
+
+#home article#profile div {
+    background:url('images/profile_bg.png') no-repeat right top;
+    background-size: 580px 180px contain;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    -o-box-sizing: border-box;
+    -ms-box-sizing: border-box;
+    box-sizing: border-box;
+    padding: 10px;
 }
 
 #home article#profile p {
