working on studio section of site

--- a/futuregreen/templates/index.html
+++ b/futuregreen/templates/index.html
@@ -15,8 +15,10 @@
             </article>
         {% endfor %}
          <article class="text box half" id="profile">
+             <div>
                 {%  gblock "firm_profile" for "content.ContentBlock" with "content/contentblock/excerpt.html" %}
                 <a href="{% url studio %}" class="tease">Read More</a>
+             </div>
         </article>
         {% for project in project_list|slice:"1:3" %}
             <article class="project box sixth" id="{{ project.slug }}">
