--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -240,6 +240,8 @@ body > footer > .contact {
     -ms-box-sizing: border-box;
     box-sizing: border-box;
     padding: 10px;
+    width:100%;
+    height:100%;
 }
 
 #home article#profile p {
