--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -227,8 +227,7 @@ body > footer > .contact {
 }
 
 #home article#profile {
-    float:left;
-    position:relative;
+
 }
 
 #home article#profile div {
@@ -242,6 +241,7 @@ body > footer > .contact {
     padding: 10px;
     width:100%;
     height:100%;
+    back
 }
 
 #home article#profile p {
