cleaning up homepage layout

--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -241,6 +241,7 @@ body > footer > .contact {
     padding: 10px;
     width:100%;
     height:100%;
+    background-color:#efefef;
 }
 
 #home article#profile p {
