cleaning up homepage layout

--- a/futuregreen/templates/index.html
+++ b/futuregreen/templates/index.html
@@ -85,7 +85,7 @@
     <script type="text/javascript">
         function Flex() {
             var height = $("article.project").width();
-            $("article.text").css('min-height', height);
+            $("article.text div").css('min-height', height);
         }
         $(document).ready(function() {
             Flex();
