--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -237,7 +237,7 @@ body > footer > .contact {
     -o-box-sizing: border-box;
     -ms-box-sizing: border-box;
     box-sizing: border-box;
-    padding: 10px;
+    padding: 10px 10px 0 10px;
     background-color:#efefef;
 }
 
