--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -273,7 +273,7 @@ body > footer > .contact {
 }
 
 
-#home article.project h1 {
+#home article.project header {
     display:none;
     position:absolute;
     top:0;
@@ -281,14 +281,24 @@ body > footer > .contact {
     width:100%;
     height:100%;
     z-index:10;
-    /*background:rgba(0,0,0,0.5);*/
-    color:rgba(255,255,255,0.8);
-    line-height:1em;
-    padding: 0;
+    padding: 10px;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    -o-box-sizing: border-box;
+    -ms-box-sizing: border-box;
+    box-sizing: border-box;
 }
 
-#home article.project:hover h1 {
+#home article.project:hover header {
     display:block;
+}
+
+#home article.project header h1 {
+    line-height:1em;
+    background:rgba(0,0,0,0.4);
+    color:rgba(255,255,255,0.8);
+    width:100%;
+    height:100%;
 }
 
 #home article.project img {
