--- a/futuregreen/templates/index.html
+++ b/futuregreen/templates/index.html
@@ -35,7 +35,7 @@
     <div class="third">
         {% for project in project_list|slice:"3:7" %}
             <article class="project box half" id="{{ project.slug }}">
-                <header><h1>{{ project.name }}</h1></header>
+                <header><a href="{{ project.get_absolute_url }}"><h1>{{ project.name }}</h1></a></header>
                 {% for image in project.projectimage_set.all %}
                     {% if image.is_main %}
                         <a href="{{ project.get_absolute_url }}">
@@ -48,7 +48,7 @@
     <div class="third">
         {% for project in project_list|slice:"7:8" %}
             <article class="project box full featured" id="{{ project.slug }}">
-                <h1>{{ project.name }}</h1>
+                <a href="{{ project.get_absolute_url }}"><h1>{{ project.name }}</h1></a>
                 {% for image in project.projectimage_set.all %}
                     {% if image.is_main %}
                         <a href="{{ project.get_absolute_url }}">
@@ -61,7 +61,7 @@
     <div class="third">
         {% for project in project_list|slice:"8:" %}
            <article class="project box half" id="{{ project.slug }}">
-                <h1>{{ project.name }}</h1>
+               <a href="{{ project.get_absolute_url }}"><h1>{{ project.name }}</h1></a>
                {% for image in project.projectimage_set.all %}
                    {% if image.is_main %}
                        <a href="{{ project.get_absolute_url }}">
