--- a/futuregreen/templates/index.html
+++ b/futuregreen/templates/index.html
@@ -22,7 +22,7 @@
         </article>
         {% for project in project_list|slice:"1:3" %}
             <article class="project box sixth" id="{{ project.slug }}">
-                <h1>{{ project.name }}</h1>
+                <header><a href="{{ project.get_absolute_url }}"><h1>{{ project.name }}</h1></a></header>
                 {% for image in project.projectimage_set.all %}
                     {% if image.is_main %}
                         <a href="{{ project.get_absolute_url }}">
@@ -61,7 +61,7 @@
     <div class="third">
         {% for project in project_list|slice:"8:" %}
            <article class="project box half" id="{{ project.slug }}">
-               <a href="{{ project.get_absolute_url }}"><h1>{{ project.name }}</h1></a>
+               <header><a href="{{ project.get_absolute_url }}"><h1>{{ project.name }}</h1></a></header>
                {% for image in project.projectimage_set.all %}
                    {% if image.is_main %}
                        <a href="{{ project.get_absolute_url }}">
