--- a/futuregreen/templates/index.html
+++ b/futuregreen/templates/index.html
@@ -5,7 +5,29 @@
      <div class="full">
        {% for project in project_list|slice:"0:1" %}
             <article class="project box sixth" id="{{ project.slug }}">
-               <header><a href="{{ project.get_absolute_url }}"><h1>{{ project.name }}</h1></a></header>
+               <header>
+                   <a href="{{ project.get_absolute_url }}"><h1>{{ project.name }}</h1></a>
+                   <ul class="categories">
+                        {% if project.project_types.all %}
+                            {% for category in project.project_types.all %}
+                                <li class="square">
+                                    <a href="#" title="{{ category.name }}" class="project-type square center">
+                                        {{ category.alternate_title }}
+                                    </a>
+                                </li>
+                            {% endfor %}
+                        {% endif %}
+                        {% if project.landscape_types.all %}
+                            {% for category in project.landscape_types.all %}
+                                <li class="square">
+                                    <a href="#" title="{{ category.name }}" class="landscape-type square center">
+                                        {{ category.alternate_title }}
+                                    </a>
+                                </li>
+                           {% endfor %}
+                        {% endif %}
+                    </ul>
+               </header>
                 {% for image in project.projectimage_set.all %}
                     {% if image.is_main %}
                         <a href="{{ project.get_absolute_url }}">
