--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -332,6 +332,7 @@ body > footer > .contact {
     font-family: purista-web-1,purista-web-2, sans-serif;
     font-size:1.5em;
     color:rgba(255,255,255,0.5);
+    font-weight:bold;
 }
 
 #home article#news h1 {
