cleaning up homepage layout

--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -533,7 +533,7 @@ body > footer > .contact {
 
 
 .slideshow #close {
-    display:none;
+    /*display:none;*/
 }
 
 .slideshow .flex-direction-nav li {
