--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -488,6 +488,7 @@ body > footer > .contact {
     height:100%;
     background: transparent;
     z-index:20000;
+    text-align: center;
 }
 
 .slideshow nav.expand a,
@@ -497,32 +498,25 @@ body > footer > .contact {
 .slideshow nav.expand a:visited {
     position:relative;
     display:block;
-    width:100%;
-    height:100%;
-    background: transparent;
+    top:50%;
+    width:180px;
+    height:180px;
+    margin-top:-90px;
     text-align:center;
     text-decoration: none;
-}
-
-
-.slideshow nav.expand a span {
-    position:absolute;
-    display:block;
+    line-height:180px;
     opacity:0;
-    top:50%;
-    width:33%;
-    margin: 0 33%;
-    font-size:8em;
     color:#fff;
     -webkit-transition: all .5s ease-in;
     -moz-transition: all .5s ease-in;
     -o-transition: all .5s ease-in;
     -ms-transition: all .5s ease-in;
     -transition: all .5s ease-in;
-
+    background: rgba(0,0,0,0.5);
+    font-size:8em;
 }
 
-.slideshow nav.expand a:hover span {
+.slideshow nav.expand:hover a {
    opacity:1.0;
    -webkit-transition: all .5s ease-in;
    -moz-transition: all .5s ease-in;
