cleaning up homepage layout

--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -527,7 +527,7 @@ body > footer > .contact {
 
 
 .slideshow #close {
-    /*display:none;*/
+    display:none;
 }
 
 .slideshow .flex-direction-nav li {
