--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -501,7 +501,7 @@ body > footer > .contact {
     top:50%;
     width:100px;
     height:100px;
-    margin-top:-50px;
+    margin:-50px auto 0 auto;
     text-align:center;
     text-decoration: none;
     line-height:100px;
