--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -492,6 +492,8 @@ body > footer > .contact {
 }
 
 .slideshow nav.expand a,
+.slideshow nav.expand a#open,
+.slideshow nav.expand a#close,
 .slideshow nav.expand a:link,
 .slideshow nav.expand a:hover,
 .slideshow nav.expand a:active,
