cleaning up homepage layout

--- a/futuregreen/templates/portfolio/project_detail.html
+++ b/futuregreen/templates/portfolio/project_detail.html
@@ -175,6 +175,7 @@
         });
         $("#open").hide();
         $("#close").show();
+        $("#close").css('display', 'block');
     });
 
     $("#close").click(function () {
