--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -514,6 +514,7 @@ body > footer > .contact {
     -transition: all .5s ease-in;
     background: rgba(0,0,0,0.5);
     font-size:6em;
+    font-family:monospace;
 }
 
 .slideshow nav.expand:hover a {
