--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -481,6 +481,7 @@ body > footer > .contact {
     filter:alpha(opacity=100); /* For IE8 and earlier */
 }
 
+/*
 .slideshow nav.expand {
     position:absolute;
     width:42.85714%;
@@ -525,7 +526,49 @@ body > footer > .contact {
    -ms-transition: all .5s ease-in;
    -transition: all .5s ease-in;
 }
+*/
 
+.slideshow nav.expand {
+    position:absolute;
+    top:0;
+    right:0;
+    background: transparent;
+    z-index:20000;
+    text-align: center;
+}
+
+.slideshow nav.expand a,
+.slideshow nav.expand a:link,
+.slideshow nav.expand a:hover,
+.slideshow nav.expand a:active,
+.slideshow nav.expand a:visited {
+    display:block;
+    width:40px;
+    height:40px;
+    margin:0;
+    text-align:center;
+    text-decoration: none;
+    line-height:40px;
+    font-weight:bold;
+    color:#fff;
+    -webkit-transition: all .5s ease-in;
+    -moz-transition: all .5s ease-in;
+    -o-transition: all .5s ease-in;
+    -ms-transition: all .5s ease-in;
+    -transition: all .5s ease-in;
+    background: rgba(0,0,0,0.5);
+    font-family:monospace;
+}
+
+.slideshow nav.expand a:hover {
+   width:80px;
+   height:80px;
+   -webkit-transition: all .5s ease-in;
+   -moz-transition: all .5s ease-in;
+   -o-transition: all .5s ease-in;
+   -ms-transition: all .5s ease-in;
+   -transition: all .5s ease-in;
+}
 
 .slideshow #close {
     display:none;
