--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -530,7 +530,7 @@ body > footer > .contact {
 
 .slideshow nav.expand {
     position:absolute;
-    top:0;
+    bottom:0;
     right:0;
     background: transparent;
     z-index:20000;
