--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -582,7 +582,9 @@ body > footer > .contact {
 
 .slideshow .flex-direction-nav a {
     position:absolute;
-    display:none;
+    /*display:none;*/
+    top:0;
+    left:0;
     /*width:28.5714286%;*/
     z-index:20000;
 }
