cleaning up homepage layout

--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -433,9 +433,13 @@ body > footer > .contact {
     background:rgba(0,0,0,0.7);
     color:#fff;
     line-height:3em;
-    padding:0 1.33%;
+    padding:0 5px;
     margin: 0;
-    width:97.34%;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    -o-box-sizing: border-box;
+    -ms-box-sizing: border-box;
+    box-sizing: border-box;
 
 }
 
@@ -531,7 +535,7 @@ body > footer > .contact {
 .slideshow nav.expand {
     position:absolute;
     bottom:0;
-    right:0;
+    right:14.28571%;
     background: transparent;
     z-index:20000;
     text-align: center;
@@ -543,19 +547,17 @@ body > footer > .contact {
 .slideshow nav.expand a:active,
 .slideshow nav.expand a:visited {
     display:block;
-    width:40px;
-    height:40px;
+    width:14.28571%;
     margin:0;
     text-align:center;
     text-decoration: none;
-    line-height:40px;
     color: rgba(255,255,255,0.8);
     -webkit-transition: all .2s ease-in;
     -moz-transition: all .2s ease-in;
     -o-transition: all .2s ease-in;
     -ms-transition: all .2s ease-in;
     -transition: all .2s ease-in;
-    background: rgba(0,0,0,0.5);
+    background: rgba(0,0,0,0.7);
     font-family:monospace;
     font-size:2em;
     font-weight:bold;
@@ -585,8 +587,7 @@ body > footer > .contact {
     top:10px;
     z-index:20000;
     display:block;
-    width:40px;
-    height:40px;
+    width:14.28571%;
     margin:0;
     text-align:center;
     text-decoration: none;
@@ -597,7 +598,7 @@ body > footer > .contact {
     -o-transition: all .2s ease-in;
     -ms-transition: all .2s ease-in;
     -transition: all .2s ease-in;
-    background: rgba(0,0,0,0.5);
+    background: rgba(0,0,0,0.7);
     font-family:monospace;
     font-size:2em;
     font-weight:bold;
