--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -587,7 +587,7 @@ body > footer > .contact {
     z-index:20000;
     display:block;
     width:4.76190333%;
-    margin:0 10px 0 0;
+    padding:0 10px 0 0;
     text-align:center;
     text-decoration: none;
     line-height:40px;
