--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -601,6 +601,11 @@ body > footer > .contact {
     font-family:monospace;
     font-size:2em;
     font-weight:bold;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    -o-box-sizing: border-box;
+    -ms-box-sizing: border-box;
+    box-sizing: border-box;
 }
 
 
