--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -428,12 +428,13 @@ body > footer > .contact {
 
 .slideshow .carousel .flex-caption {
     position:absolute;
+    width:100%;
     bottom:0;
     left:0;
     background:rgba(0,0,0,0.7);
     color:#fff;
     line-height:3em;
-    padding:0 5px;
+    padding:0 10px;
     margin: 0;
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
